--- a/footer.html
+++ b/footer.html
@@ -3,13 +3,13 @@
         <div class="row align-items-center">
             <div class="col-md-6 d-flex justify-content-start gap-3">
                 <div class="social-icons d-flex gap-3">
-                    <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram fa-2x"></i></a>
-                    <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f fa-2x"></i></a>
-                    <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter fa-x"></i></a>
+                    <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="col-md-6 text-end">
-                <p class="mb-0">&copy; 2013 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
+                <p class="mb-0">&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
             </div>
         </div>
     </div>
