--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,6 @@
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+</head>
 <footer class="bg-dark text-white py-3">
     <div class="container">
         <div class="row align-items-center">
@@ -9,7 +12,7 @@
                 </div>
             </div>
             <div class="col-md-6 text-end">
-                <p class="mb-0">&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
+                <p class="mb-0 copyright-text">&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
             </div>
         </div>
     </div>
