--- a/referanslar.html
+++ b/referanslar.html
@@ -77,7 +77,87 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans1.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans7.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans8.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans9.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans10.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans11.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans12.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans13.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans14.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <div class="card-body">
+                            <h5 class="card-title">Lüks Otel Projesi</h5>
+                            <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
+                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card product-card">
+                        <img src="/images/referans15.jpg" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
