--- a/referanslar.html
+++ b/referanslar.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans1.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans1.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
