--- a/referanslar.html
+++ b/referanslar.html
@@ -21,147 +21,147 @@
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans2.jpg" class="card-img-top" alt="Modern Ofis Projesi">
+                        <img src="/images/referans2.webp" class="card-img-top" alt="Modern Ofis Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Modern Ofis Projesi</h5>
                             <p class="card-text">Ankara'da bir teknoloji firması için masif parke döşemesi.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans3.jpg" class="card-img-top" alt="Konut Projesi">
+                        <img src="/images/referans3.webp" class="card-img-top" alt="Konut Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Konut Projesi</h5>
                             <p class="card-text">İzmir'de lüks bir residence için suya dayanıklı LVT parke.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans4.jpg" class="card-img-top" alt="Restoran Yenileme">
+                        <img src="/images/referans4.webp" class="card-img-top" alt="Restoran Yenileme">
                         <div class="card-body">
                             <h5 class="card-title">Restoran Yenileme</h5>
                             <p class="card-text">Antalya'da bir restorana özel tasarım masif parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans5.jpg" class="card-img-top" alt="Okul Projesi">
+                        <img src="/images/referans5.webp" class="card-img-top" alt="Okul Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Okul Projesi</h5>
                             <p class="card-text">Bursa'daki bir okul için dayanıklı laminat parke çözümleri.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans6.jpg" class="card-img-top" alt="Alışveriş Merkezi">
+                        <img src="/images/referans6.webp" class="card-img-top" alt="Alışveriş Merkezi">
                         <div class="card-body">
                             <h5 class="card-title">Alışveriş Merkezi</h5>
                             <p class="card-text">Adana'da bir AVM için modern LVT parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans7.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans7.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans8.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans8.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans9.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans9.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans10.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans10.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans11.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans11.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans12.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans12.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans13.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans13.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans14.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans14.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card product-card">
-                        <img src="/images/referans15.jpg" class="card-img-top" alt="Lüks Otel Projesi">
+                        <img src="/images/referans15.webp" class="card-img-top" alt="Lüks Otel Projesi">
                         <div class="card-body">
                             <h5 class="card-title">Lüks Otel Projesi</h5>
                             <p class="card-text">İstanbul'daki 5 yıldızlı otel için özel laminat parke uygulaması.</p>
-                            <button class="btn btn-outline-primary" disabled>Detaylar</button>
+                            <a href="https://wa.me/905322055283" target="_blank" class="btn btn-outline-primary">Detaylı Bilgi</a>
                         </div>
                     </div>
                 </div>
