--- a/header.html
+++ b/header.html
@@ -1,16 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
-                <li class="nav-item"><a class="nav-link" href="urunler.html">Ürünler</a></li>
-                <li class="nav-item"><a class="nav-link" href="referanslar.html">Referanslar</a></li>
-                <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
-            </ul>
+<header>
+    <div class="top-bar bg-dark text-white py-2">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="contact-info">
+                <span><i class="fas fa-map-marker-alt me-2"></i>Natoyolu Cad. No:46/A Dudullu - Ümraniye | İstanbul</span>
+                <span class="ms-3"><i class="fas fa-phone-alt me-2"></i><a href="tel:+905322055283" class="text-white">+90 532 205 5283</a></span>
+            </div>
+            <div class="social-icons d-flex gap-3">
+                <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
     </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-parke">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="urunler.html">Ürünler</a></li>
+                    <li class="nav-item"><a class="nav-link" href="referanslar.html">Referanslar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
