--- a/footer.html
+++ b/footer.html
@@ -9,6 +9,7 @@
                     <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter"></i></a>
+                    <a href="https://wa.me/905322055283" target="_blank" class="text-white"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="col-md-6 text-end">
