--- a/header.html
+++ b/header.html
@@ -3,6 +3,8 @@
         <div class="container d-flex justify-content-between align-items-center">
             <div class="contact-info">
                 <span><i class="fas fa-map-marker-alt me-2"></i>Çeceli Mah. 2004 Sk. No:1 Karaisalı - Türkiye </span>
+                <span> </span> 
+                <span> </span>
                 <span class="ms-3"><i class="fas fa-phone-alt me-2"></i><a href="tel:+905322055283" class="text-white">+90 532 205 5283</a></span>
             </div>
             <div class="social-icons d-flex gap-3">
