--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <div id="header-placeholder"></div>
     
     <section id="home" class="hero-section">
-        <div class="container text-center">
-            <h1>Öyküm Toptan Parke</h1>
-            <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
-            <a href="urunler.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
+        <div class="container text-center d-flex align-items-center justify-content-center h-100">
+            <div>
+                <h1>Öyküm Toptan Parke</h1>
+                <p>Kaliteli Parke Çözümleriyle Mekanlarınızı Yenileyin</p>
+                <a href="urunler.html" class="btn btn-primary btn-lg">Ürünleri Keşfet</a>
+            </div>
         </div>
     </section>
     
