--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
                 <a href="https://wa.me/905322055283" target="_blank" class="text-white"><i class="fab fa-whatsapp"></i></a>
             </div>
             <div class="contact-info">
-                <span><i class="fas fa-map-marker-alt me-2"></i>Çeceli Mah. 2004 Sk. No:1 Karaisalı - Türkiye</span>
+                <span class="address"><i class="fas fa-map-marker-alt me-2"></i>Çeceli Mah. 2004 Sk. No:1 Karaisalı - Türkiye</span>
                 <span class="ms-3"><i class="fas fa-phone-alt me-2"></i><a href="tel:+905322055283" class="text-white">+90 532 205 5283</a></span>
             </div>
         </div>
