--- a/footer.html
+++ b/footer.html
@@ -4,15 +4,15 @@
 <footer class="bg-dark text-white py-3">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6 d-flex justify-content-start gap-3">
-                <div class="social-icons d-flex gap-3">
+            <div class="col-12 social-icons-wrapper text-center">
+                <div class="social-icons d-flex justify-content-center gap-3">
                     <a href="https://www.instagram.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.twitter.com/oykumtoptanparke" target="_blank" class="text-white"><i class="fab fa-twitter"></i></a>
                     <a href="https://wa.me/905322055283" target="_blank" class="text-white"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
-            <div class="col-md-6 text-end">
+            <div class="col-12 text-center copyright-wrapper">
                 <p class="mb-0 copyright-text">&copy; 2025 Öyküm Toptan Parke. Tüm hakları saklıdır.</p>
             </div>
         </div>
