--- a/header.html
+++ b/header.html
@@ -15,7 +15,9 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-parke">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Öyküm Toptan Parke</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="/images/logo.png" alt="Öyküm Toptan Parke Logo" class="logo-img">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
